[tool.poetry]
name = "perfect-coffee-time"
version = "0.1.0"
description = ""
authors = ["TatsuyaKatayama <katayama1227ron@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
